# A2B-Ambisonic-Microphone

./: README.md
firmware_iface/: .ccls  .gitignore  .justfile  CMakeLists.txt  README.md  calc_respcycs.py  flake.nix
firmware_iface/src/: a2b.h  a2b_internal.h  a2b_master.c  a2b_regs.h  a2b_util.c  i2c.c  i2c.h  log.h  main.c  time.c  time.h  usart.c  usart.h
holder_cad/: .gitignore  Backplane.ipt  Backplate.ipt  Sphere.ipt  SphereMount.ipt  Sphere_V2.ipt
holder_cad/PassiveSonar/PassiveSonar/: ACT1210L-201-2P-TL00--3DModel-STEP-269445.iam  C_0402_1005Metric.iam  C_0402_1005Metric.ipt  C_0603_1608Metric.iam  C_0603_1608Metric.ipt  C_0805_2012Metric.iam  C_0805_2012Metric.ipt  D_SMA.iam  D_SMA.ipt  LED_0603_1608Metric.iam  LED_0603_1608Metric.ipt  L_0805_2012Metric.iam  L_0805_2012Metric.ipt  PassiveSonar_PCB.ipt  PassiveSonar_pad_1.ipt  PassiveSonar_pad_10.ipt  PassiveSonar_pad_100.ipt  PassiveSonar_pad_101.ipt  PassiveSonar_pad_102.ipt  PassiveSonar_pad_103.ipt  PassiveSonar_pad_104.ipt  PassiveSonar_pad_105.ipt  PassiveSonar_pad_106.ipt  PassiveSonar_pad_107.ipt  PassiveSonar_pad_11.ipt  PassiveSonar_pad_110.ipt  PassiveSonar_pad_111.ipt  PassiveSonar_pad_112.ipt  PassiveSonar_pad_113.ipt  PassiveSonar_pad_114.ipt  PassiveSonar_pad_115.ipt  PassiveSonar_pad_116.ipt  PassiveSonar_pad_117.ipt  PassiveSonar_pad_118.ipt  PassiveSonar_pad_119.ipt  PassiveSonar_pad_12.ipt  PassiveSonar_pad_120.ipt  PassiveSonar_pad_121.ipt  PassiveSonar_pad_122.ipt  PassiveSonar_pad_123.ipt  (+893 more)
kicad_iface/: .gitignore  ORDERING.md  PassiveSonar_Interface.kicad_pcb  PassiveSonar_Interface.kicad_pro  PassiveSonar_Interface.kicad_sch
kicad_iface/production/: netlist.ipc
kicad_libs/: Library.kicad_sym
kicad_libs/Library.pretty/: WMM7040DTHN0.kicad_mod
kicad_micboard/: MP34DT06J.STEP  ORDERING.md  PassiveSonar.kicad_pcb  PassiveSonar.kicad_pro  PassiveSonar.kicad_sch  fp-lib-table  sym-lib-table
kicad_micboard/Library.pretty/: BGA-6_3x2_1.5x1.0mm.kicad_mod  TDK-ACT1210L-101-2P-TL00.kicad_mod
kicad_micboard/production/: netlist.ipc
